[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Backgrounds/VillageBackground3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Backgrounds/VillageBackground1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Backgrounds/VillageBackground2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/PlayerKB.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/World.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=7]
[ext_resource path="res://Assets/Backgrounds/DarkForestSky.png" type="Texture" id=8]
[ext_resource path="res://Assets/Misc/rain.png" type="Texture" id=9]
[ext_resource path="res://Assets/Misc/flatDark24.png" type="Texture" id=10]
[ext_resource path="res://Assets/Misc/flatDark26.png" type="Texture" id=11]
[ext_resource path="res://Assets/Misc/flatDark25.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="GameManager" type="Node"]
script = ExtResource( 6 )

[node name="World" type="Node2D" parent="."]
z_index = -500
z_as_relative = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="World"]
script = ExtResource( 7 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="World/ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="World/ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="World/ParallaxBackground"]
motion_scale = Vector2( 0.35, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="World/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, 120 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="World/ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="World/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, 160 )
texture = ExtResource( 1 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="World/ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="World/ParallaxBackground/ParallaxLayer4"]
centered = false

[node name="Platforms" type="Node2D" parent="World"]

[node name="Player" parent="World" instance=ExtResource( 4 )]
collision_mask = 17

[node name="MoonLayer" type="CanvasLayer" parent="World"]
layer = -101

[node name="Sprite" type="Sprite" parent="World/MoonLayer"]
position = Vector2( 0, 36 )
scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 8 )
centered = false
flip_h = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="World"]
position = Vector2( 284, 0 )
emitting = false
amount = 512
lifetime = 3.0
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 284, 30 )
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0.0627451, 0.682353, 0.843137, 1 )
hue_variation = 0.02

[node name="GUI" parent="." instance=ExtResource( 5 )]
margin_left = 1.0
margin_right = 1.0

[node name="RainTimer" type="Timer" parent="."]
one_shot = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 200, 312 )
scale = Vector2( 0.5, 0.5 )
z_index = 100
normal = ExtResource( 12 )
shape = SubResource( 1 )
shape_visible = false
action = "Jump"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 264, 312 )
scale = Vector2( 0.5, 0.5 )
z_index = 100
normal = ExtResource( 11 )
shape = SubResource( 2 )
shape_visible = false
action = "Slide"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 328, 312 )
scale = Vector2( 0.5, 0.5 )
z_index = 100
normal = ExtResource( 10 )
shape = SubResource( 3 )
shape_visible = false
action = "Attack"
visibility_mode = 1

[connection signal="theme_changed" from="World/ParallaxBackground" to="." method="_on_ParallaxBackground_theme_changed"]
[connection signal="died" from="World/Player" to="." method="_on_Player_died"]
[connection signal="enemy_killed" from="World/Player" to="." method="_on_Enemy_killed"]
[connection signal="exited" from="World/Player" to="." method="_on_Player_exited"]
[connection signal="game_over" from="World/Player" to="." method="_on_Game_Over"]
[connection signal="timeout" from="RainTimer" to="." method="_on_RainTimer_timeout"]
